--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
-.important {
-  color: blue
+.my-class {
+  border: 2px solid green;
+  background-color: lightgrey;
+  margin-left: 80px;
+  margin-right: 80px;
+  padding: 5px;
+  text-align: center;
 }
 
 .unimportant {
@@ -10,10 +15,6 @@
   color: yellow
 }
 
-/* body {
-  background-color: lightblue
-} */
-
 body {
  background-image: url("https://buffer.com/library/wp-content/uploads/2016/06/giphy.gif");
  background-repeat: no-repeat;
@@ -22,7 +23,6 @@ body {
 
 h1 {
   font-family: 'Permanent Marker', cursive;
-  background-color: lightgrey;
   text-align: center;
 }
 
@@ -31,14 +31,20 @@ h2 {
   text-align: center;
 }
 
-.center {
+img {
+  display: block;
   width: 50%;
-  /* height: auto; */
   margin-left: auto;
   margin-right: auto;
 }
 
 ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
   background-color: lightgrey;
+  text-align: center;
+}
+li {
   text-align: center;
 }
